--- a/R7.Epsilon/Skins/css/skin.scss
+++ b/R7.Epsilon/Skins/css/skin.scss
@@ -286,7 +286,7 @@ header > .container > .row
     {
         left:16px; // ~ border-radius of .searchInputContainer
         box-shadow:2px 2px 2px #333;
-        z-index:1100; // fix open submenu ovelaps search preview
+        z-index:1020; // fix open submenu ovelaps search preview
     }
 }
 
